--- a/FoodReview.Api/FoodReview.Api.csproj
+++ b/FoodReview.Api/FoodReview.Api.csproj
@@ -9,7 +9,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FoodReview.Repositorty\FoodReview.Repository.csproj" />
   </ItemGroup>
 
 </Project>
