--- a/FoodReview.Service/FoodReview.Service.csproj
+++ b/FoodReview.Service/FoodReview.Service.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FoodReview.Model\FoodReview.Model.csproj" />
+    <ProjectReference Include="..\FoodReview.Repositorty\FoodReview.Repository.csproj" />
   </ItemGroup>
 
 </Project>
