--- a/FoodReview.Api/appsettings.json
+++ b/FoodReview.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FoodReview;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "GoogleAuthSettings": {
+    "ClientId": "YOUR_GOOGLE_CLIENT_ID",
+    "ClientSecret": "YOUR_GOOGLE_CLIENT_SECRET",
+    "RedirectUri": "YOUR_GOOGLE_REDIRECT_URI"
   }
 }
